fixed z-index for dropdown

--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -1,5 +1,6 @@
 .navbar {
     height: 5vh;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
